# waros

./: .gitignore  BLUEPRINT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TRADEMARKS.md
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/waros-cli/: Cargo.toml
crates/waros-cli/src/: main.rs  utils.rs
crates/waros-cli/src/commands/: bench.rs  ibm.rs  mod.rs  qstat.rs  repl.rs  run.rs  show.rs
crates/waros-crypto/: Cargo.toml
crates/waros-crypto/examples/: pqc_demo.rs
crates/waros-crypto/src/: error.rs  hash.rs  kem.rs  lib.rs  qrng.rs  sign.rs
crates/waros-crypto/tests/: crypto.rs
crates/waros-pkg/: Cargo.toml
crates/waros-pkg/src/: bootstrap_root_v1.pk.hex  lib.rs
crates/waros-python/: Cargo.toml  README.md  pyproject.toml
crates/waros-python/src/: algorithms.rs  circuit.rs  crypto.rs  ibm.rs  lib.rs  noise.rs  qasm.rs  result.rs  simulator.rs
crates/waros-python/tests/: test_waros.py
crates/waros-python/waros/: __init__.py  compat.py  waros.pyd
crates/waros-quantum/: Cargo.toml
crates/waros-quantum/benches/: statevector.rs
crates/waros-quantum/examples/: bell_state.rs  grover_2bit.rs  ibm_real_hardware.rs  noise_simulation.rs  qaoa_demo.rs  quantum_teleportation.rs  shor_demo.rs  vqe_demo.rs
crates/waros-quantum/examples/qasm/: ghz5.qasm
crates/waros-quantum/src/: circuit.rs  complex.rs  error.rs  gate.rs  lib.rs  noise.rs  result.rs
crates/waros-quantum/src/algorithms/: mod.rs  qaoa.rs  qpe.rs  random_walk.rs  shor.rs  simon.rs  vqe.rs
crates/waros-quantum/src/backends/: mod.rs  simulator.rs
crates/waros-quantum/src/backends/ibm/: auth.rs  client.rs  jobs.rs  mod.rs  transpiler.rs  types.rs
crates/waros-quantum/src/circuit/: extensions.rs
crates/waros-quantum/src/optimizer/: mod.rs
crates/waros-quantum/src/qasm/: mod.rs  parser.rs  serializer.rs
crates/waros-quantum/src/qec/: mod.rs  repetition.rs  steane.rs
crates/waros-quantum/src/simulator/: density.rs  mod.rs  mps.rs  statevector.rs  trajectory.rs
crates/waros-quantum/tests/: algorithms.rs  gate_behavior.rs  gate_unitarity.rs  mps.rs  noise_model.rs  qasm.rs  qec.rs  result_and_statistics.rs  rotation_boundaries.rs
docs/: ARCHITECTURE_AUDIT_MARCH_2026.md  IMPLEMENTATION_STATUS_MATRIX.md  POST_WARSHIELD_PASS1_STATUS.md  POST_WARSHIELD_PASS2_STATUS.md  POST_WARSHIELD_PASS3_STATUS.md  POST_WARSHIELD_PASS4_STATUS.md  PRE_PASS3_CONSOLIDATION_STATUS.md  WAREXEC_MINIMAL_ABI.md  WARPKG_SIGNING.md  WARPKG_UPDATES_AND_RECOVERY.md
examples/: README.md
examples/qasm/: grover2.qasm  qft4.qasm  teleportation.qasm
kernel/: Cargo.toml
kernel/src/: main.rs  panic.rs
kernel/src/arch/x86_64/: fpu.rs  gdt.rs  idt.rs  interrupts.rs  mod.rs  pic.rs  pit.rs  port.rs
kernel/src/auth/: login.rs  mod.rs  passwords.rs  permissions.rs  session.rs  users.rs
kernel/src/boot/: mod.rs  uefi.rs
kernel/src/disk/: cache.rs  format.rs  mod.rs  persist.rs  virtio_blk.rs
kernel/src/display/: branding.rs  console.rs  font.rs  framebuffer.rs  mod.rs
kernel/src/drivers/: keyboard.rs  serial.rs
kernel/src/exec/: address_space.rs  compat.rs  context.rs  elf.rs  fd_table.rs  loader.rs  mod.rs  pipe.rs  process.rs  scheduler.rs  signal.rs  smoke.rs  syscall.rs
kernel/src/exec/syscalls/: ai.rs  crypto.rs  file.rs  io.rs  memory.rs  mod.rs  network.rs  process.rs  quantum.rs  signal.rs  time.rs
kernel/src/fs/: mod.rs
kernel/src/gui/: compositor.rs  cursor.rs  desktop.rs  font.rs  framebuffer.rs  mod.rs  mouse.rs  taskbar.rs  theme.rs  widgets.rs  window.rs
kernel/src/gui/apps/: files.rs  mod.rs  quantum.rs  sysinfo.rs  terminal.rs
kernel/src/hal/: device.rs  mod.rs  traits.rs
kernel/src/hal/acpi/: mod.rs  tables.rs
kernel/src/hal/bus/: pci.rs
kernel/src/hal/display/: mod.rs
kernel/src/hal/input/: mod.rs
kernel/src/hal/net/: e1000.rs  mod.rs  nic_select.rs
kernel/src/hal/storage/: mod.rs
kernel/src/hal/usb/: descriptors.rs  hid.rs  mass_storage.rs  mod.rs  xhci.rs
kernel/src/memory/: heap.rs  mod.rs  paging.rs  physical.rs
kernel/src/net/: arp.rs  buffer.rs  dhcp.rs  dns.rs  ethernet.rs  http.rs  ibm.rs  icmp.rs  ipv4.rs  mod.rs  pci.rs  serial.rs  tcp.rs  udp.rs
kernel/src/net/tls/: mod.rs
kernel/src/net/tls/anchors/: digicert_global_root_g3.hex  globalsign_ecc_root_r4.hex
kernel/src/net/tls/proof/: warenterprise_leaf.hex  we1_intermediate.hex
kernel/src/net/virtio/: mod.rs  net.rs  queue.rs  transport.rs
kernel/src/pkg/: bootstrap.rs  commands.rs  installer.rs  manifest.rs  mod.rs  registry.rs  resolver.rs  signature.rs  smoke.rs  update.rs
kernel/src/pkg/signatures/: crypto-tools.sig.hex  hello-world.sig.hex  network-utils.sig.hex  quantum-benchmarks.sig.hex  quantum-examples.sig.hex  system-monitor.sig.hex  war-shell-plugins.sig.hex  waros-docs.sig.hex
kernel/src/quantum/: circuits.rs  display.rs  gates.rs  mod.rs  session.rs  simulator.rs  state.rs
kernel/src/security/: aslr.rs  capabilities.rs  memory_protection.rs  mod.rs
kernel/src/security/audit/: events.rs  logger.rs  mod.rs
kernel/src/security/crypt/: entropy.rs  file_encryption.rs  mod.rs  qkd.rs
kernel/src/security/firewall/: connection_track.rs  mod.rs  rules.rs
kernel/src/security/policy/: profiles.rs
kernel/src/security/vault/: integrity.rs  mod.rs
kernel/src/shell/: commands.rs  history.rs  mod.rs
kernel/src/task/: mod.rs
kernel/tools/: boot_smoke.sh  create_disk.ps1  create_image.ps1  create_image.sh  run_qemu.ps1  run_qemu.sh  run_qemu_pair.ps1  run_qemu_pair.sh
tools/kernel-image-builder/: Cargo.toml
tools/kernel-image-builder/src/: main.rs
