[package]
name = "waros-kernel"
version = "0.1.0"
edition = "2021"
authors = ["War Enterprise <contact@warenterprise.com>"]
license = "Apache-2.0"
publish = false

[workspace]

[dependencies]
bootloader_api = "0.11.15"
libm = "0.2"
linked_list_allocator = "0.10"
noto-sans-mono-bitmap = { version = "0.3.2", default-features = false, features = ["regular", "size_16", "unicode-basic-latin"] }
pc-keyboard = "0.7"
pic8259 = "0.11"
spin = "0.9"
uart_16550 = "0.3"
x86_64 = "0.15"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
strip = true
