[package]
name = "waros-kernel"
version = "0.2.0"
edition = "2021"
authors = ["War Enterprise <contact@warenterprise.com>"]
license = "Apache-2.0"
publish = false

[workspace]

[dependencies]
arrayvec = { version = "0.7", default-features = false }
bootloader_api = "0.11.15"
libm = "0.2"
linked_list_allocator = "0.10"
noto-sans-mono-bitmap = { version = "0.3.2", default-features = false, features = ["regular", "size_16", "unicode-basic-latin"] }
pc-keyboard = "0.7"
pic8259 = "0.11"
smoltcp = { version = "0.11", default-features = false, features = ["alloc", "medium-ethernet", "proto-ipv4", "socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "socket-dhcpv4", "socket-dns"] }
spin = "0.9"
uart_16550 = "0.3"
x86_64 = "0.15"
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
sha2 = { version = "0.10", default-features = false }
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12", default-features = false }
sha3 = { version = "0.10", default-features = false }
embedded-tls = { version = "0.18", default-features = false, features = ["alloc"] }
embedded-io = { version = "0.7", default-features = false }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[patch.crates-io]
embedded-tls = { path = "vendor/embedded-tls-0.18.0" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
strip = true
