[package]
name = "waros-quantum"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WarOS Quantum Simulator & SDK — High-performance quantum circuit simulation"
keywords = ["quantum", "simulator", "qubits", "waros", "quantum-computing"]
categories = ["science", "simulation"]

[dependencies]
nalgebra = "0.33"
num-complex = "0.4"
rand = "0.8"
rayon = "1.11"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "statevector"
harness = false

[[example]]
name = "bell_state"
path = "examples/bell_state.rs"

[[example]]
name = "grover_2bit"
path = "examples/grover_2bit.rs"

[[example]]
name = "quantum_teleportation"
path = "examples/quantum_teleportation.rs"
