[package]
name = "waros-quantum"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WarOS Quantum Simulator & SDK — High-performance quantum circuit simulation"
keywords = ["quantum", "simulator", "qubits", "waros", "quantum-computing"]
categories = ["science", "simulation"]

[features]
default = ["simulator"]
simulator = []
ibm = ["dep:reqwest", "dep:serde", "dep:serde_json", "dep:dirs"]
all-backends = ["simulator", "ibm"]

[dependencies]
nalgebra = "0.33"
num-complex = "0.4"
rand = "0.8"
rayon = "1.11"
thiserror = "1.0"
dirs = { version = "5", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "statevector"
harness = false

[[example]]
name = "bell_state"
path = "examples/bell_state.rs"

[[example]]
name = "grover_2bit"
path = "examples/grover_2bit.rs"

[[example]]
name = "quantum_teleportation"
path = "examples/quantum_teleportation.rs"
